# CloserOS

./: .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  PROJECT_STATUS.md  README.md  TASKS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: action-pins.json
apps/api/: pyproject.toml
apps/api/src/closeros_api/: __init__.py  __main__.py  ai_policy_router.py  ai_policy_schemas.py  analysis_router.py  analysis_schemas.py  app.py  auth_ports.py  auth_router.py  auth_schemas.py  auth_security.py  composition.py  conversations_router.py  crm_integrations_router.py  crm_schemas.py  csv_import_schemas.py  csv_imports_router.py  dashboard_router.py  knowledge_router.py  knowledge_schemas.py  managers_router.py  metrics_router.py  metrics_schemas.py  observability_router.py  outbound_messages_router.py  product_catalog_router.py  product_catalog_schemas.py  product_schemas.py  product_security.py  reply_ai_runtime.py  reply_suggestion_router.py  reply_suggestion_schemas.py  request_correlation.py  retention_router.py  settings.py  tasks_router.py  tenant_schemas.py  tenants_router.py  webhooks_router.py  whatsapp_integrations_router.py  (+1 more)
apps/worker/: pyproject.toml
apps/worker/src/closeros_worker/: __init__.py  __main__.py  runtime.py  settings.py
docs/: AI_EVALUATION.md  AI_GATEWAY.md  AI_SYSTEM.md  ARCHITECTURE.md  AUDIT_LOG.md  AUTHENTICATION_API.md  AUTHENTICATION_FRONTEND.md  BACKUP_RESTORE.md  CI.md  CRM_INTEGRATION.md  CSV_IMPORT.md  DECISIONS.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DESIGN_PARTNER_PILOT.md  DEVELOPMENT_WORKFLOW.md  DOMAIN_MODEL.md  ENCRYPTED_CONTENT.md  ENVIRONMENT_VARIABLES.md  FIRST_CURSOR_PROMPT.md  IMPLEMENTATION_BLOCKS.md  INCIDENT_RESPONSE.md  INGESTION.md  INTEGRATIONS.md  KNOWLEDGE_BASE.md  MEDIA_SCANNING.md  METRICS.md  MIGRATION_RUNBOOK.md  OBSERVABILITY.md  (+19 more)
(+325 files in other folders)
