[project]
name = "closeros-workspace"
version = "0.0.0"
description = "CloserOS AI Python workspace"
requires-python = "==3.13.14"

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==2.2.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[tool.uv]
package = false
required-version = "==0.11.28"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "packages/backend",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["apps", "packages", "tests"]
exclude = ["node_modules", ".venv"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
